tests/specs/run/sourcemap_remote/external.js.out
Download https://raw.githubusercontent.com/denoland/deno/3e987b146a4d90ffe9ec421925dddd3b05ce0abe/tests/specs/run/sourcemap_external/external.js.map
error: Uncaught (in promise) Error: Test error with external sourcemap
  throw new Error("Test error with external sourcemap");
  ^
    at throwError ([WILDCARD]original.ts:3:3)
    at [WILDCARD]original.ts:6:14
