tests/specs/run/sourcemap_remote/external.js
// Original TypeScript file
function throwError() {
  throw new Error("Test error with external sourcemap");
}

throwError();

//# sourceMappingURL=https://raw.githubusercontent.com/denoland/deno/3e987b146a4d90ffe9ec421925dddd3b05ce0abe/tests/specs/run/sourcemap_external/external.js.map
